# wsl2-ssh-agent

./: Cargo.toml  LICENSE  PROGRESS.md  README.md
.github/workflows/: ci.yml  release.yml
src/: agent.rs  cli.rs  main.rs
src/backends/: mod.rs  openssh_pipe.rs  pageant.rs
systemd/: wsl2-ssh-agent.service  wsl2-ssh-agent.socket
