[package]
name = "wsl2-ssh-agent"
version = "0.1.0"
edition = "2024"

[dependencies]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_DataExchange",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
  "Win32_System_Memory",
  "Win32_UI_WindowsAndMessaging",
] }
